issue: Fix signle category label selecting bug
- If an issue has one of single category labels and a user selects one of signle category labels that the issue has, existing label should be replaced with selected one instead of attached.

See: Yona Github issue #111 #146

--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -14,7 +14,7 @@
 @import models.enumeration.State
 
 
-@issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {@label.category.name,@label.id,@label.name|}}
+@issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {@label.category.name,@label.id,@label.name,@label.category.id,@label.category.isExclusive|}}
 
 <ul class="post-list-wrap row-fluid">
 @for(issue <- issueList){
