navbar: Change to display pure name only

--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -92,7 +92,7 @@
                 <span class="avatar-wrap smaller">
                     <img src="@currentUser.avatarUrl(32)" />
                 </span>
-                <span class="caret-text">@currentUser.name</span>
+                <span class="caret-text">@currentUser.getPureNameOnly</span>
                 <span class="caret"></span>
             </a>
         </li>
