project: Add starred project feature at project breadcromb

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -277,3 +277,7 @@ input.white::-webkit-input-placeholder   { color:#fff; opacity:0.8; }
 input.white:-moz-placeholder             { color:#fff; opacity:0.8; } /* Firefox 18- */
 input.white::-moz-placeholder            { color:#fff; opacity:0.8; } /* Firefox 19+ */
 input.white:-ms-input-placeholder        { color:#fff; opacity:0.8; }
+
+.va-text-top {
+    vertical-align: text-top !important;
+}
