--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -419,6 +419,19 @@
                         font-size: 14px;
                         margin-left:5px;
                     }
+
+                    .user-project-list {
+                        .star {
+                            color: rgba(255, 255, 255, 0.22);
+                            &:hover {
+                                color: #e91e63;
+                                cursor: pointer;
+                            }
+                        }
+                        .starred {
+                            color: #e91e63 !important;
+                        }
+                    }
                 }
 
                 .project-origin {
