issue: Add feature to get the list of voters and to copy emails of voters
- Remove duplicated div tag in partial_voters_scala.html

--- a/app/views/issue/partial_voter_list.scala.html
+++ b/app/views/issue/partial_voter_list.scala.html
@@ -43,6 +43,7 @@
         </ul>
     </div>
     <div class="modal-footer">
+        <button id="copyEmailBtn" class="ybtn ybtn-info ybtn-small" data-clipboard-text="@for(voter <- voters){ @voter.email;}" >@Messages("button.copy.email")</button>
         <button class="ybtn ybtn-info ybtn-small" data-dismiss="modal" aria-hidden="true">@Messages("button.close")</button>
     </div>
 </div>
