script: Use API to check if clipboard is supported & Add alert message when copying email was successful

--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -512,7 +512,13 @@
                 });
             });
 
-            var clipboard = new Clipboard('#copyEmailBtn');
+            if (Clipboard.isSupported()) {
+                var clipboard = new Clipboard('#copyEmailBtn');
+
+                clipboard.on('success', function(e) {
+                    $yobi.alert('@Messages("button.copy.email.success.message")');
+                });
+            }
         });
 </script>
 }
