view: Remove ux(number of heart) & Add new feature for copying email to message(voters more)

--- a/app/views/issue/partial_voters.scala.html
+++ b/app/views/issue/partial_voters.scala.html
@@ -27,7 +27,9 @@
                     @if(issueVoters.size > numOfAvatars + numOfNames) {
                             &hellip;
                     }">
-                    <span>...</span>
+                    <a href="#voters" data-toggle="modal">
+                    @Messages("issue.voters.more", issueVoters.size - numOfAvatars)
+                    </a>
                 </li>
             }
         }
