issue: Issue sharing feature - view and message

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -219,6 +219,7 @@ input[type=number]::-webkit-outer-spin-button {
 .mt4 { margin-top:4px; }
 .mr3 { margin-right:3px; }
 .pb4 { padding-bottom: 4px}
+.pl0 { padding-left: 0}
 
 .margin-top-20   { margin-top:20px;   }
 .margin-left-20  { margin-left: 20px; }
@@ -280,4 +281,22 @@ input.white:-ms-input-placeholder        { color:#fff; opacity:0.8; }
 
 .va-text-top {
     vertical-align: text-top !important;
+}
+
+.width100p {
+    width: 100%
+}
+
+.text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.z-index-1 {
+    z-index: 1 !important;
+}
+
+.hideFromDisplayOnly {
+    display: none;
 }
