--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -182,6 +182,23 @@
     .box-shadow(none);
 }
 
+.sharer-list {
+    .select2-container{
+        border: none;
+        box-shadow: none;
+        border-radius: 0 !important;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    }
+    .select2-container-multi {
+        .select2-choices {
+            .select2-search-choice {
+                background-color: #ececec;
+                border: 1px solid #dfdfdf;
+            }
+        }
+    }
+}
+
 .select2-dropdown-open {
     .select2-choice {
         border-bottom-color: transparent;
