--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3066,6 +3066,14 @@ label.inline-list {
                 &.rejected {background: #F39C12;}
                 &.conflict {background: #C0392B;}
                 &.resolved {background: #468847;}
+                &.sharer-added {
+                    background-color: #B2EBF2;
+                    color: #0097A7;
+                }
+                &.sharer-deleted {
+                    background-color: #FFCCBC;
+                    color: #F4511E;
+                }
              }
 
              em { font-size:12px; color:#7F8C8D; margin-right:5px;}
