css: Change notification box position

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -581,8 +581,8 @@ span.issue-label {
 .yobiToasts {
     position: fixed;
     overflow: hidden;
-    left: 20px !important;
-    top: 25px !important;
+    right: 20px !important;
+    bottom: 25px !important;
     margin: 10px;
     z-index:9999;
 
