--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7012,7 +7012,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     -moz-shadow: inset 0 0 5px 5px #222;
     //box-shadow: inset 0 0 5px 5px #222;
     box-shadow: 2px 2px 8px #000;
-    background: #FFF url('/assets/images/loading-gif-2.gif') no-repeat center;
+    background: #FFF url('@{base-image-path}/loading-gif-2.gif') no-repeat center;
 }
 
 .myissues-search-input {
