issue: Display label changing history at issue timeline
See: Yona Github issue #355

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3074,6 +3074,14 @@ label.inline-list {
                     background-color: #FFCCBC;
                     color: #F4511E;
                 }
+                &.label-added {
+                    background-color: #B2EBF2;
+                    color: #0097A7;
+                }
+                &.label-deleted {
+                    background-color: #FFCCBC;
+                    color: #F4511E;
+                }
              }
 
              em { font-size:12px; color:#7F8C8D; margin-right:5px;}
