--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -304,3 +304,5 @@ input.white:-ms-input-placeholder        { color:#fff; opacity:0.8; }
 .fixed-height-my-issues-list {
     line-height: 36px;
 }
+
+.dimgray { color:dimgray; }
