organization: Complement pull request group view
This commit complements f8ed345f which support listing
whole pull request list in the group menu.

Now, "Closed" tab works.

See: Yona Github issue #320

--- a/app/views/organization/group_pullrequest_list.scala.html
+++ b/app/views/organization/group_pullrequest_list.scala.html
@@ -17,7 +17,7 @@
 @searchFormAction(category: Category) = @{
     category match {
         case Category.CLOSED => {
-            routes.OrganizationApp.organizationPullRequests(organization.name, "closed")
+            routes.OrganizationApp.organizationClosedPullRequests(organization.name)
         }
         case Category.OPEN => {
             routes.OrganizationApp.organizationPullRequests(organization.name, "open")
